force-app/main/default/objects/Cambio_de_Contrasena_App_User__c/Cambio_de_Contrasena_App_User__c.object-meta.xml
<CustomObject>
    <description>Objeto para disparar un proceso de aprobacion de cambio de contraseña</description>
    <label>Cambio de Contraseña App User</label>
    <nameField>
        <displayFormat>CPUA-{00000}</displayFormat>
        <label>Cambio de Contraseña Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cambio de Contraseña App User</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>