force-app/main/default/objects/Cambio_de_Contrasena_App_User__c/fields/Pass__c.field-meta.xml
<CustomField>
    <fullName>Pass__c</fullName>
    <label>Pass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>