force-app/main/default/objects/Cambio_de_Contrasena_App_User__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cambio_de_Contrase_a_App_User</relationshipName>
    <type>Lookup</type>
</CustomField>